# SJTU-TicketSystem

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak1  LICENSE  README.md
docs/: B+ 树总体设计.md  火车票系统设计.md  要求.md
include/: BPlusTree.hpp  BPlusTree_implement.hpp  BPlusTree_old.hpp  BPlusTree_old_implement.hpp  FileOperator.hpp  FileOperator.hpp.bak  FileOperator_implement.hpp  Map.cpp  Map.hpp  Order.hpp  Order_implement.hpp  Timer.hpp  Train.hpp  Train_implement.hpp  User.hpp  User_implement.hpp  Utilities.hpp  Vector.hpp  exceptions.hpp
src/: code.cpp  test.cpp
